REGRESSION (r259137): Clip-path rendering regression when element contains transformed child https://bugs.webkit.org/show_bug.cgi?id=219829 Source/WebCore:

<rdar://problem/66308088>

Reviewed by Said Abou-Hallawa.

When computing the geometry for clip-path when applied to a CSS box, we should take overflow:hidden
on the box into account. It's not entirely clear what the correct geometry is
(https://github.com/w3c/csswg-drafts/issues/5786) but this avoids stretched masks.

Test: css3/masking/clip-path-overflow-hidden-bounds.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::setupClipPath):

LayoutTests:

Reviewed by Said Abou-Hallawa.

* css3/masking/clip-path-overflow-hidden-bounds-expected.html: Added.
* css3/masking/clip-path-overflow-hidden-bounds.html: Added.

Canonical link: https://commits.webkit.org/232491@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270850 268f45cc-cd09-0410-ab3c-d52691b4dbfc